# dog-walking-simulation

./: .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  Makefile  README.md  changes.patch  colors.txt  dogsim.world  hydro.patch  mainpage.dox  manifest.xml  recording_commands.txt
action/: AdjustBasePosition.action  AdjustDogPosition.action  ControlDogPosition.action  FocusHead.action  LookAtPath.action  MoveRobot.action  PointArmCamera.action  SearchForDog.action
config/: dwa_local_planner.yaml  local_costmap_params.yaml  sensors_stereo.yaml
include/dogsim/: utils.h
launch/: all.launch  bad_dog.launch  base.launch  base_no_sensors.launch  base_simulated_sensors.launch  blockwalk.launch  blockwalk_bad_dog_heuristic.launch  blockwalk_bad_dog_high_arm.launch  blockwalk_bad_dog_no_steering.launch  blockwalk_bad_dog_solo_dog.launch  blockwalk_good_dog_heuristic.launch  blockwalk_good_dog_high_arm.launch  blockwalk_good_dog_no_steering.launch  blockwalk_good_dog_solo_dog.launch  blockwalk_solo_robot.launch  dog.launch  dog_and_leash.launch  force_scoring.launch  good_dog.launch  good_dog_all.launch  heuristic.launch  high_arm.launch  high_arm_position.launch  leash.launch  lissajous.launch  lissajous_bad_dog_heuristic.launch  lissajous_bad_dog_high_arm.launch  lissajous_bad_dog_no_steering.launch  lissajous_bad_dog_solo_dog.launch  lissajous_good_dog_heuristic.launch  lissajous_good_dog_high_arm.launch  lissajous_good_dog_no_steering.launch  lissajous_good_dog_solo_dog.launch  lissajous_solo_robot.launch  no_steering.launch  pr2_heuristic.launch  pr2_no_movement.launch  random_dog_movement.launch  real_sensors.launch  record_world.launch  (+16 more)
models/: dog.model  figure8.blend  leash.model  settings.model
msg/: .gitignore  AdjustDogPositionAction.msg  AdjustDogPositionActionFeedback.msg  AdjustDogPositionActionGoal.msg  AdjustDogPositionActionResult.msg  AdjustDogPositionGoal.msg  AvoidingDog.msg  DogPosition.msg  LeashInfo.msg  LookAtPathAction.msg  LookAtPathActionFeedback.msg  LookAtPathActionGoal.msg  LookAtPathActionResult.msg  LookAtPathGoal.msg  MoveArmToBasePositionAction.msg  MoveArmToBasePositionActionFeedback.msg  MoveArmToBasePositionActionGoal.msg  MoveArmToBasePositionActionResult.msg  MoveDogAwayAction.msg  MoveDogAwayActionFeedback.msg  MoveDogAwayActionGoal.msg  MoveDogAwayActionResult.msg  MoveDogAwayGoal.msg  PathViewInfo.msg  PathViewMetrics.msg  SearchForDogAction.msg  SearchForDogActionFeedback.msg  SearchForDogActionGoal.msg  SearchForDogActionResult.msg  SearchForDogGoal.msg  ViewChangeRequest.msg
octave/: add_gaussians.m  add_gaussians_wb.m  lissajous.m
rviz/: .gitignore  dogsim.vcg  dogsim_new.rviz  front_on_view.rviz  overhead_path.rviz  r_arm_debugging.rviz  solo_path_config.rviz
scripts/: test_dog_search.py
src/: .gitignore  adjust_base_position_action.cpp  adjust_dog_position_action.cpp  arm_move_cost_estimator.h  arm_multi_object_detector.cpp  avoid_dog.cpp  block_walk_path_provider.h  control_dog_position_behavior.cpp  detection_image_publisher.cpp  dog_model_plugin.cpp  dog_model_plugin_driver.cpp  dog_position_detector.cpp  dog_position_measurer.cpp  dog_visualizer.cpp  focus_head_action.cpp  get_path_server.cpp  high_arm_position_action.cpp  leash_force_measurer.cpp  leash_model_plugin.cpp  leash_model_plugin_driver.cpp  leash_visualizer.cpp  leash_world_plugin.cpp  leash_world_plugin_driver.cpp  lissajous_path_provider.h  look_at_path_action.cpp  map_broadcaster.cpp  move_arm_to_base_position_action.cpp  move_arm_to_clear_position_action.cpp  move_dog_away_action.cpp  move_robot_action.cpp  move_robot_local_planner_action.cpp  no_op_adjust_arm_position_action.cpp  path_planner.cpp  path_provider.h  path_scorer.cpp  path_visibility_detector.cpp  path_visibility_measurer.cpp  path_visualizer.cpp  piecewise_linear_path_provider.h  point_arm_camera_action.cpp  (+9 more)
src/dogsim/msg/: _AdjustDogPositionAction.py  _AdjustDogPositionActionFeedback.py  _AdjustDogPositionActionGoal.py  _AdjustDogPositionActionResult.py  _AdjustDogPositionFeedback.py  _AdjustDogPositionGoal.py  _AdjustDogPositionResult.py  _DogPosition.py  _MoveRobotAction.py  _MoveRobotActionFeedback.py  _MoveRobotActionGoal.py  _MoveRobotActionResult.py  _MoveRobotFeedback.py  _MoveRobotGoal.py  _MoveRobotResult.py  __init__.py
src/dogsim/srv/: _GetPath.py  __init__.py
srv/: GetDogOrientation.srv  GetDogPlannedPosition.srv  GetEntirePath.srv  GetEntireRobotPath.srv  GetPath.srv  GetPlannedRobotPose.srv  MaximumTime.srv  StartPath.srv
